# machine-learning

./: .gitignore  3d_logistic_regression.py  linear_regression.py  logistic_regression.py  ml.py  multiple_linear_regression.py  polynomial_regression.py  pyproject.toml  qodana.sarif.json
examples/: 3d_logistic_regression.py  linear_regression.py  logistic_regression.py  mnist.ipynb  multiple_linear_regression.py  nn.ipynb  nn.py  polynomial_regression.py
ml/: activation.py  cost.py  gradient_descent.py  nn.py  normalizer.py  predict.py  regularization.py  tools.py
ml/cost/: __init__.py
ml/definition/: __init__.py  functions.py
ml/nn/: __init__.py
ml/regression/: linear.py  logistic.py
