[tool.poetry]
name = "machinelearning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = { extras = ["cuda12"], version = "^0.4.30" }
jaxtyping = "^0.2.33"
matplotlib = "^3.9.1"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
