[tool.poetry]
name = "machinelearning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = { extras = ["cuda12"], version = "^0.4.30" }
jaxtyping = "^0.2.33"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
equinox = "^0.11.5"
optax = "^0.2.3"
torch = {version = "^2.4.0+cu124", source = "pytorch-cu124"}
torchvision = {version = "^0.19.0+cu124", source = "pytorch-cu124"}
torchaudio = {version = "^2.4.0+cu124", source = "pytorch-cu124"}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
